--- a/SXNU_Questionnaire/SXNU_Questionnaire/Views/Notice/notice.cshtml
+++ b/SXNU_Questionnaire/SXNU_Questionnaire/Views/Notice/notice.cshtml
@@ -3,25 +3,20 @@
     ViewBag.Title = "通知中心";
     ViewBag.flgStyle = "note";
 } 
-@*<div class="wrapper">
-    <div class="left w-30 m-t18"><img src="~/Content/images/home.jpg"></div>
-    <div class="left w-630 nav m-t3">
-        <ul>
-            <li><a href="/Home/Index">首页</a></li>
-            <li><a href="/Ques/Ques">问卷中心</a></li>
-            <li><a class="nav_hover" href="/Notice/Notice">通知中心</a></li>
-        </ul>
-    </div>
-    <div class="right search_k m-t11"><img class="left m-r10" src="~/Content/images/sec.jpg"><input class="w-270 search" value="请输入关键字"></div>
-    <div class="clear"></div>
-</div>*@
+<script type="text/javascript">
+    $(function () {
+        var pageModel = new SXNU_ViewModel_Index_Notice($);
+        ko.applyBindings(pageModel, $("#NoticePage")[0]);
+
+    });
+</script>
 <div class="show_h"></div>
 <div class="wrapper m-t30 m-b30">
     <div><img src="~/Content/images/center.jpg"></div>
 
-    <div class="content">
+    <div class="content" >
         <div class="wrapper">
-            <div class="main">
+            <div class="main" id="NoticePage">
                 <div class="year">
                     <h1 class="title"></h1>
                     <h2><a href="#">2014年</a></h2>
@@ -170,14 +165,4 @@
         </div>
     </div>
 </div>
-<script>
-    $(".main .year .list").each(function (e, target) {
-        var $target = $(target),
-            $ul = $target.find("ul");
-        $target.height($ul.outerHeight()), $ul.css("position", "absolute");
-    });
-    $(".main .year>h2>a").click(function (e) {
-        e.preventDefault();
-        $(this).parents(".year").toggleClass("closes");
-    });
-</script>
+ 
