--- a/SXNU_Questionnaire/SXNU_Questionnaire/Views/Home/index.cshtml
+++ b/SXNU_Questionnaire/SXNU_Questionnaire/Views/Home/index.cshtml
@@ -28,8 +28,8 @@
             <ul data-bind="foreach:$root.newQuestion">
                 <li>
                     <div class="pos_rel">
-                        <img data-bind="attr:{src:wj_BeginPic}"><div class="pos_abs nameb"><a href="#" data-bind="text:wj_Title"></a></div>
-                        <div class="ind_lan pos_abs ceng" style="display: none">
+                        <img style="width:310px;height:200px" data-bind="attr:{src:wj_BeginPic}"><div class="pos_abs nameb"><a href="#" data-bind="text:wj_Title"></a></div>
+                        <div class="ind_lan pos_abs ceng" style="display: none" data-bind="attr:{class:IsExpire=='y'?'ind_hui pos_abs ceng':'ind_lan pos_abs ceng'}">
                             <h2 class="m-b10 m-t5" data-bind="text:wj_Title">企业员工满意度调查</h2><!--ko text:'项目来源：'+wj_ProjectSource--><!--/ko--><br>
                             <!--ko text:'有效期：'+wj_ValidStart+'-'+wj_ValidEnd --><!--/ko--><br><!--ko text:'发布者：'+wj_Sponsor --><!--/ko--><br>
                             <!--ko text:'发布时间：'+wj_PublishTime --><!--/ko--><br>
