--- a/SXNU_Questionnaire/SXNU_Questionnaire/Views/Ques/ViewAnswer.cshtml
+++ b/SXNU_Questionnaire/SXNU_Questionnaire/Views/Ques/ViewAnswer.cshtml
@@ -24,6 +24,7 @@
     <div class="left volume_left w-160">
         <div class="center volume_bottom p-b10" data-bind="text:AnswerTime">答卷时间：30分42秒</div>
         <div class="cen_left p-l15 p-t15">
+            <h3> <!--ko text:$root.AnswerName--><!--/ko--></h3>
             <!-- ko foreach:$root.BaseInfo -->
             <!--ko text:tit+'：'+iv--><!--/ko--><br>
             <!-- /ko -->
@@ -116,7 +117,7 @@
                 <ul data-bind="template: { name: 'pv_temp', foreach: Title_pic_vido, as: 'pvp' }"></ul>
                 <div class="clear"></div>
             </div>
-            <div class="m-l25 m-r15">
+            <div class="m-l25 m-r15" style="border-style:solid">
                 <table border=0 cellspacing=0 cellpadding=0 width="100%" class="volume_table">
                     <tr class="volu_bj">
                         <td class="center">内容项</td>
